fix: changed font faces for readability
* changed fonts found in the projects page and the individual pages to a more readable, monospace, font.

* fixed a minor bug on the socials on hover effect showing up grey.

--- a/project-style.css
+++ b/project-style.css
@@ -1,11 +1,23 @@
 body {
-    font-family: 'Doto', sans-serif;
+    font-family: 'IBM Plex Mono', sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f3f3f3;
     color: #333;
   }
   
+  .ibm-plex-mono-regular {
+    font-family: "IBM Plex Mono", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .ibm-plex-mono-regular-italic {
+    font-family: "IBM Plex Mono", serif;
+    font-weight: 400;
+    font-style: italic;
+  }
+
   .outer-container {
     width: 60%;
     margin: 20px auto;
@@ -17,10 +29,12 @@ body {
   
   .navbar {
     display: flex;
+    font-family: "Doto", sans-serif;
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
     border-bottom: 1px solid #ccc;
+
   }
   
   .navbar .name {
@@ -58,6 +72,10 @@ body {
     text-align: center;
     margin-bottom: 40px;
   }
+
+  h2{
+    font-family: "Doto", sans-serif;
+  }
   
   .project {
     display: flex;
@@ -69,6 +87,9 @@ body {
     background-color: #fff;
   }
   
+  .project h2 {
+    font-family: "Doto", sans-serif;
+  }
   .project:nth-child(even) {
     flex-direction: row-reverse;
   }
@@ -116,10 +137,6 @@ body {
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3); 
     cursor: pointer; 
     position: relative; 
-  }
-  
-  button:hover {
-    background-color: #e0e0e0;
   }
   
   .quote {
